@@ -30,7 +30,7 @@ public class BinarySelectorMessagePattern implements MessagePattern {
 	public BinarySelectorMessagePattern(BinarySelector binarySelector, VariableName variableName) {
 		this.binarySelector = binarySelector;
 		this.variableName = variableName;
-		variableName.index(2);
+		variableName.index(1);
 	}
 
 	public int line() {
