@@ -9,7 +9,7 @@ Object < #Transcript
   <methodInsn: INVOKEVIRTUAL, 'java/io/PrintStream', 'println', '()V'>.
   <varInsn: ALOAD, 1>.
 
-+ stdout: anObject
++ stdout: string
   "load System.out"
   <fieldInsn: GETSTATIC, 'java/lang/System', 'out', 'Ljava/io/PrintStream;'>.
   "Load anObject onto stack. 0 = this method, 1 = receiver, 2 = class method was found in, 3 = first argument."
