@@ -1,3 +1,3 @@
 
-Transcript show: 'Hello World.'.
+Transcript show: 'Hello World.'; cr.
 
